--- a/style.css
+++ b/style.css
@@ -12,3 +12,8 @@ p {
     font-size: 20px;
     text-align: center
 }
+img.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
